--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "qemu"]
 	path = qemu
 	url = https://github.com/qemu/qemu.git
+[submodule "libvirt"]
+	path = libvirt
+	url = https://github.com/libvirt/libvirt.git
